# faux-db

./: .gitignore  Makefile  README.md  main.py  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml
catalogs/: furniture.yml  sport.yml  toys.yml
docs/: index.md
docs/architecture/: generation-flow.md  index.md
docs/assets/javascripts/: mermaid.js
docs/assets/stylesheets/: extra.css
docs/cli/: config-validate.md  index.md  init.md  schema-generate.md
docs/configuration/: catalogs.md  functions.md  index.md  providers.md  schemas.md  seeds.md
docs/getting-started/: index.md  installation.md  quickstart.md
docs/reference/: configuration-cheatsheet.md  project-layout.md
functions/: test.py
jsonschema/v1/: README.md  catalog.schema.json  providers.schema.json  schema-file.schema.json
outputs/: orders.csv  products.csv
providers/: ecommerce.yml  furniture_providers.yml  random_seed_provider.yml
schemas/: products.yml
schemas/ecommerce/: customers.yml  order_items.yml  orders.yml  products.yml
schemas/testing/: abc.yml
seeds/: real_companies.csv
src/faux/: __init__.py
src/faux/cli/: app.py  console.py  help.py
src/faux/cli/commands/: __init__.py  init.py  schema.py
src/faux/core/: __init__.py  constants.py  context.py  dag.py  engine.py  exceptions.py  resolver_factory.py  table_generator.py
src/faux/core/project_init/: __init__.py  scaffold.py
src/faux/parsers/: schema.py
src/faux/providers/: config.py  file_reader_specs.py  registry.py
src/faux/providers/catalog/: __init__.py
src/faux/resolvers/: faker_node.py  file_reader_context.py  provider_node.py
src/faux/sinks/: base.py
src/kuriboh/: __init__.py  cli.py
src/kuriboh/cli/: __init__.py  app.py  console.py  help.py
src/kuriboh/cli/commands/: common.py  config.py  init.py
src/kuriboh/core/: __init__.py  constants.py  context.py  dag.py  engine.py  exceptions.py  resolver_builder.py  resolver_factory.py  table_generator.py  types.py  validation.py
src/kuriboh/core/project_init/: scaffold.py
src/kuriboh/core/project_init/templates/catalogs/: demo.yml
src/kuriboh/core/project_init/templates/providers/: example.yml
src/kuriboh/parsers/: loader.py  schema.py  validator.py
src/kuriboh/providers/: base.py  config.py  expression.py  file_reader.py  file_reader_specs.py  random_choice.py  registry.py  template_choice.py
src/kuriboh/providers/catalog/: __init__.py  dsl.py
src/kuriboh/resolvers/: base.py  expression.py  faker_node.py  file_reader_context.py  func_node.py  provider_node.py  ref_node.py  rel_node.py
src/kuriboh/sinks/: base.py  csv_sink.py  factory.py  json_sink.py  sql_sink.py
tests/: conftest.py
tests/fixtures/catalogs/common/: adjectives.yaml  color.yaml  materials.yaml
tests/fixtures/catalogs/furnitures/: bedroom.yaml  kitchen.yaml  living_room.yaml
tests/fixtures/providers/: bedroom_provider.yaml  random_choice.yaml
tests/fixtures/schemas/test_case_simple/: product.yml
tests/integration/: scenario_helpers.py
tests/integration/basic_faker/: conftest.py  test_basic_faker.py
tests/integration/basic_faker/fixtures/schemas/: product.yml
tests/integration/domain_fan_in_fan_out/: conftest.py  test_integration_domain_fan_in_fan_out.py
tests/integration/domain_fan_in_fan_out/fixtures/schemas/fan_in_fan_out/: junction_e.yml  terminal_f.yml  wave_a.yml  wave_b.yml  wave_c.yml  wave_d.yml
tests/integration/domain_shopping/: conftest.py  test_integration_domain_shopping.py
tests/integration/domain_shopping/fixtures/catalogs/: retail.yaml
tests/integration/domain_shopping/fixtures/functions/: shopping.py
tests/integration/domain_shopping/fixtures/providers/: shopping.yaml
tests/integration/domain_shopping/fixtures/schemas/shopping/: customer.yml  product.yml  store.yml  transaction.yml  transaction_orders.yml
tests/integration/domain_shopping/fixtures/seeds/: brands.csv  carrier_by_status.csv
tests/integration/func_simple/: conftest.py  test_func_simple.py
tests/integration/func_simple/fixtures/functions/: __init__.py  simple.py
tests/integration/func_simple/fixtures/schemas/: line_default_prefix.yml  line_explicit_prefix.yml
tests/integration/random_choice_provider/: conftest.py  test_integration_random_choice.py
tests/integration/random_choice_provider/fixtures/schemas/: customers.yml
tests/integration/template_catalog_furniture/fixtures/catalogs/common/: material.yaml
tests/integration/template_catalog_furniture/fixtures/catalogs/furnitures/: bedroom.yaml
tests/integration/template_choice_provider_domain_furniture/: conftest.py  test_template_catalog_furniture.py
tests/integration/template_choice_provider_domain_furniture/fixtures/catalogs/common/: adjective.yaml  empty.yaml
tests/integration/template_choice_provider_domain_furniture/fixtures/providers/: template_choice.yaml
tests/integration/template_choice_provider_domain_furniture/fixtures/schemas/: furniture.yml
tests/unit/: test_cli.py
tests/unit/catalogs/: test_catalog_dsl.py
tests/unit/cli/: test_cli.py
tests/unit/core/: test_dag.py  test_engine.py  test_provider_plan_validation.py  test_resolver_factory.py  test_table_generator.py
tests/unit/parsers/: test_loader.py  test_schema.py
tests/unit/providers/: test_config.py  test_expression.py  test_expression_provider.py  test_file_reader.py  test_random_choice.py  test_random_choice_provider.py  test_registry.py  test_template_choice_provider.py
tests/unit/resolvers/: test_base_resolver.py  test_faker_node.py  test_file_reader_context.py  test_func_node.py  test_provider_node.py  test_rel_node.py
tests/unit/sinks/: test_sinks.py
(+3 files in other folders)
