[project]
name = "faux-db"
version = "0.1.0"
description = "Configuration-driven fake data generation built on top of faker."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "faker==40.11.0",
    "pyyaml==6.0.3",
    "pydantic==2.12.5",
    "polars<=1.39.3",
    "click",
    "rich"
]
authors = [
    { name = "Khoa, Le Minh", email = "leminkhoa@gmail.com" },
]

[project.urls]
Homepage = "https://github.com/leminkhoa/faux-db"
Repository = "https://github.com/leminkhoa/faux-db"
Documentation = "https://leminkhoa.github.io/faux-db/"

[project.optional-dependencies]
pep8 = [
    "ruff",
]

test = [
    "pytest>=9.0.2",
    "pytest-cov>=6.0.0",
]
docs = [
    "mkdocs==1.6.1",
    "mkdocs-material",
    "pymdown-extensions",
]

[project.scripts]
faux = "faux.cli:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
pythonpath = ["src", "."]
testpaths = ["tests"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
faux = [
    "core/project_init/templates/catalogs/*.yml",
    "core/project_init/templates/functions/*.py",
    "core/project_init/templates/providers/*.yml",
    "core/project_init/templates/schemas/example/*.yml",
]

[tool.coverage.report]
exclude_lines = [
    "no cov",
    "if __name__ == .__main__.:",
    "__repr__",
    "if TYPE_CHECKING:"
]

[tool.black]
line-length = 100
skip-string-normalization = true

[tool.isort]
profile = "black"
line_length = 100


[tool.ruff]
# For ruff rules, refer to https://docs.astral.sh/ruff/rules/

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-simplify
    "SIM",
    # isort
    "I",
]
# TC001–TC003 (flake8-type-checking): moving imports to TYPE_CHECKING is often wrong when names are used at runtime (Path, Faker, etc.).
ignore = ["E501", "E731", "T201", "W293", "C408", "DTZ001", "F811", "TC001", "TC002", "TC003"]

